# telegram_digest

./: .env.example  .gitignore  README.md  channels.yaml  future_features.md  pyproject.toml
.github/workflows/: ci.yml
src/telegram_digest/: __init__.py  cleaner.py  config.py  fetcher.py  firebase_db.py  migrate_flat.py  pdf_digest.py  summarizer.py  test_db_view.py
src/telegram_digest/cli/: __init__.py  app.py
src/telegram_digest/templates/: digest.html.j2
tests/: test_telegram_connection.py
